# kubernetes-runbooks-mcp-server

./: .gitignore  README.md  claude_desktop_config.json  kubernetes_runbooks_server.py  pyproject.toml
.github/workflows/: dependency-updates.yml  publish-pypi.yml  shared.yml  test-installation.yml
src/create_mcp_server/template/: kubernetes_runbooks_server.py.jinja2
