[project]
name = "kubernetes-runbooks-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server that fetches Kubernetes troubleshooting runbooks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Raihan Afiandi", email = "mraihanafiandi@gmail.com" }
]
maintainers = [
    { name = "David Soria Parra", email = "davidsp@anthropic.com" },
    { name = "Justin Spahr-Summers", email = "justin@anthropic.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "mcp>=1.0.0",
]

[project.scripts]
kubernetes-runbooks-server = "kubernetes_runbooks_server:cli"

[project.urls]
Homepage = "https://github.com/raihan0824/kubernetes-runbooks-mcp-server"
Repository = "https://github.com/raihan0824/kubernetes-runbooks-mcp-server"
Issues = "https://github.com/raihan0824/kubernetes-runbooks-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "kubernetes_runbooks_server.py",
    "README.md",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.4",
    "pytest>=7.0.0",
    "twine>=6.1.0",
]
